<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rothar</string>

    <!-- Start screen -->
    <!-- bluetooth dialog -->
    <string name="bluetooth_dialog_title">Bluetooth disabled ?</string>
    <string name="bluetooth_dialog_message">Please enable bluetooth.</string>
    <string name="ok">OK</string>
    <!-- networking dialog -->
    <string name="networking_dialog_title">Networking disabled ?</string>
    <string name="networking_dialog_message">Please enable wifi or mobile data.</string>

    <!-- Register screen -->
    <string name="title_activity_register">Register tag</string>
    <string name="tag_welcome_header">Welcome to Rothar App !</string>
    <string name="tag_welcome_message">Please enter your 4 letter tag code bellow (or TEST to try the application)</string>
    <string name="tag_welcome_footer">or</string>
    <string name="tag_code_hint">....</string>
    <string name="register_button">Activate my tag</string>
    <string name="request_button">Request for new tag</string>
    
    <string name="marked_stolen_dialog_title">We will search for your bike.</string>
    <string name="marked_stolen_dialog_message">You will receive notification when your bike will found by any member of Rothar app community.</string>
    <string name="marked_found_dialog_title">Bike found !</string>
    <string name="marked_found_dialog_message">We found your bike. Please consider donating.</string>
    
    <!-- Map screen -->
    <string name="title_activity_map">Reports map</string>
    <!-- menu -->
    <string name="action_previous_day">Previous day</string>
    <string name="action_next_day">Next day</string>
    <string name="action_mark_stolen">Mark as stolen</string>
    <string name="action_mark_found">Mark as found</string>
    <string name="action_donate">Donate</string>

    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="category_application">Application</string>
    <string name="pref_title_app_uuid">UUID</string>
    <string name="pref_key_app_uuid">app-uuid</string>
    <string name="pref_title_app_version">Version</string>
    <string name="pref_key_app_version">app-version</string>
    <string name="category_tag">Tag</string>
    <string name="pref_title_tag_id">Id</string>
    <string name="pref_key_tag_id">tag-id</string>
    <string name="pref_title_tag_code">Code</string>
    <string name="pref_key_tag_code">tag-code</string>
    
</resources>
