<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory 
        android:title="@string/category_tag">
        <EditTextPreference
		    android:title="@string/pref_title_tag_code"
		    android:key="@string/pref_key_tag_code"
		    android:enabled="false"/>
		<EditTextPreference
		    android:title="@string/pref_title_tag_id" 
		    android:key="@string/pref_key_tag_id"
		    android:enabled="false"/>
	</PreferenceCategory>
	
	<PreferenceCategory 
        android:title="@string/category_application">
			<EditTextPreference
			    android:title="@string/pref_title_app_version" 
			    android:key="@string/pref_key_app_version"
			    android:enabled="false"/>
		    <EditTextPreference
			    android:title="@string/pref_title_app_uuid" 
			    android:key="@string/pref_key_app_uuid"
			    android:enabled="false"/>
    </PreferenceCategory>
    
</PreferenceScreen>